[metadata]
name = docker-ndp-daemon
version = 1b2
author = Tim Pommerening
author_email = tim@tyranus.de
description = Small python daemon that gives new started docker containers IPv6 internet connectivity by automatically adding their IPv6 addresses to the NDP proxy table.
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/pommes/docker-ndp-daemon
license = Unlicense
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: POSIX :: Linux

[options]
include_package_data = False
packages = find:
python_requires = >=3.6

install_requires =
    docker
    urllib3

tests_require =
    mock

[options.extras_require]

[options.entry_points]
console_scripts =
    docker-ndp-daemon = docker_ndp_daemon.main:init_app